@@ -109,6 +109,12 @@ namespace libtorrent
 		void set_low_prio_io(bool b) { m_low_prio_io = b; }
 		void get_status(std::vector<pool_file_status>* files, void* st) const;
 
+		// close the file that was opened least recently (i.e. not *accessed*
+		// least recently). The purpose is to make the OS (really just windows)
+		// clear and flush its disk cache associated with this file. We don't want
+		// any file to stay open for too long, allowing the disk cache to accrue.
+		void close_oldest();
+
 #if TORRENT_USE_ASSERTS
 		bool assert_idle_files(void* st) const;
 
@@ -127,8 +133,12 @@ namespace libtorrent
 
 		struct lru_file_entry
 		{
-			lru_file_entry(): last_use(aux::time_now()), mode(0) {}
+			lru_file_entry()
+				: opened(aux::time_now())
+				, last_use(opened)
+				, mode(0) {}
 			file_handle file_ptr;
+			time_point const opened;
 			time_point last_use;
 			int mode;
 		};
