@@ -46,5 +46,6 @@ alias libtorrent-sims :
 	[ run test_tracker.cpp ]
 	[ run test_ip_filter.cpp ]
 	[ run test_fast_extensions.cpp ]
+	[ run test_file_pool.cpp ]
 	;
 
