@@ -426,6 +426,7 @@ namespace aux {
 		, m_boost_connections(0)
 		, m_timer(m_io_service)
 		, m_lsd_announce_timer(m_io_service)
+		, m_close_file_timer(m_io_service)
 		, m_host_resolver(m_io_service)
 		, m_next_downloading_connect_torrent(0)
 		, m_next_finished_connect_torrent(0)
@@ -1093,6 +1094,8 @@ namespace aux {
 		// cleanly. i.e. essentially tracker hostname lookups that we're not
 		// about to send event=stopped to
 		m_host_resolver.abort();
+
+		m_close_file_timer.cancel();
 
 		// abort the main thread
 		m_abort = true;
@@ -3565,6 +3568,16 @@ retry:
 //		m_peer_pool.release_memory();
 	}
 
+	void session_impl::on_close_file(error_code const& e)
+	{
+		if (e) return;
+
+		m_disk_thread.files().close_oldest();
+
+		// re-issue the timer
+		update_close_file_interval();
+	}
+
 	namespace {
 	// returns the index of the first set bit.
 	int log2(boost::uint32_t v)
@@ -5452,6 +5465,19 @@ retry:
 		{
 			i->second->update_max_failcount();
 		}
+	}
+
+	void session_impl::update_close_file_interval()
+	{
+		int const interval = m_settings.get_int(settings_pack::close_file_interval);
+		if (interval == 0 || m_abort)
+		{
+			m_close_file_timer.cancel();
+			return;
+		}
+		error_code ec;
+		m_close_file_timer.expires_from_now(seconds(interval), ec);
+		m_close_file_timer.async_wait(make_tick_handler(boost::bind(&session_impl::on_close_file, this, _1)));
 	}
 
 	void session_impl::update_proxy()
