@@ -126,6 +126,12 @@ namespace libtorrent
 #pragma GCC diagnostic ignored "-Winvalid-offsetof"
 #endif
 
+#ifdef TORRENT_WINDOWS
+#define CLOSE_FILE_INTERVAL 120
+#else
+#define CLOSE_FILE_INTERVAL 0
+#endif
+
 	namespace {
 
 	using aux::session_impl;
@@ -350,6 +356,7 @@ namespace libtorrent
 		SET_NOPREV(cache_size_volatile, 256, 0),
 		SET_NOPREV(urlseed_max_request_bytes, 16 * 1024 * 1024, 0),
 		SET_NOPREV(web_seed_name_lookup_retry, 1800, 0),
+		SET_NOPREV(close_file_interval, CLOSE_FILE_INTERVAL, &session_impl::update_close_file_interval),
 	};
 
 #undef SET
